apps/ai/perplexica/perplexica-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perplexica-backend-deployment
  namespace: perplexica
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perplexica-backend
  template:
    metadata:
      labels:
        app: perplexica-backend
    spec:
      containers:
      - name: backend-container
        image: mitchross09/perplexica-backend:latest
        ports:
          - containerPort: 3001
        volumeMounts:
          - mountPath: /home/perplexica/data
            name: backend-dbstore-volume
          - mountPath: /home/perplexica/uploads
            name: uploads-volume
          - mountPath: /home/perplexica/config.toml
            subPath: config.toml
            name: config-toml-configmap
      volumes:
        - name: backend-dbstore-volume
          persistentVolumeClaim:
            claimName: backend-dbstore-pvc
        - name: uploads-volume
          persistentVolumeClaim:
            claimName: uploads-pvc
        - name: config-toml-configmap
          configMap:
            name: config-toml-configmap
