apps/ai/perplexica/perplexica-backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perplexica-backend
  namespace: perplexica
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "api.perplexica.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: perplexica-backend-service
          port: 3001
